feat: member 도메인 생성